# afsha

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh
src/: afsha_config.h.in  app_config.h.in  main.cpp
src/include/: wav_writer.h
